--- a/experience.html
+++ b/experience.html
@@ -77,7 +77,9 @@
   <hr class="divider">
 
   <h2 class="category">Relevant Coursework</h2>
-  <h3 class="subject">Computer Science Courses</h3>
+
+  <div class="subject">
+  <h3 >Computer Science Courses</h3>
   <div class="group3">
   <h4 class="year">Junior Year</h4>
   <p><span class="courseID">INFO 1300</span> - Introductory Design and Programming for the Web (HTML &amp; CSS)</p>
@@ -108,8 +110,10 @@
   <p>In high school, I took AP Computer Science (Java)</p>
   <br>
   </div>
+  </div>
 
-  <h3 class="subject">Math Courses</h3>
+  <div class="subject">
+  <h3>Math Courses</h3>
   <div class="group2">
   <h4 class="year">Sophomore Year</h4>
   <p><span class="courseID">CS 4850</span> - Mathematical Foundations for the Information Age</p>
@@ -126,13 +130,16 @@
   <p>In high school, I took AP Calculus BC and Multivariable calculus</p>
   <br>
   </div>
+  </div>
 
+  <div class="subject">
   <h3 class="subject">Linguistics Courses</h3>
   <div class="group1">
   <p><span class="courseID">LING 1101</span> - Introduction to Linguistics</p>
   <p><span class="courseID">LING 4485</span> - Topics in Computational Linguistics (Matlab &amp; Python)</p>
-  </div>
   <br>
+  </div>
+  </div>
 </div>
 
 <footer class="contact">
