added stuff to projects

--- a/experience.html
+++ b/experience.html
@@ -26,7 +26,7 @@
 
   <div class="job1">
   <img src="img/blackbird.png" alt="Blackbird" style="border: 2px solid">
-  <h3 class="company">Blackbird Technologies</h3>
+  <h3 class="subcategory">Blackbird Technologies</h3>
   <h4 class="position">Artificial Intelligence Intern</h4>
   <h4 class="time">May 2014 – August 2014</h4>
   <p>Worked on detecting the dominant color in an image, using decision trees and support vector machines<br>
@@ -43,7 +43,7 @@
 
   <div class="job2">
   <img src="img/cornell.gif" alt="Cornell">
-  <h3 class="company">Cornell University</h3>
+  <h3 class="subcategory">Cornell University</h3>
   <h4 class="position">Calculus Course Assistant</h4>
   <h4 class="time">August 2013 – December 2013</h4>
   <p>Graded homework<br>
@@ -53,7 +53,7 @@
 
   <div class="job1">
   <img src="img/awp.png" alt="AWP">
-  <h3 class="company">Ancient Wisdom Productions</h3>
+  <h3 class="subcategory">Ancient Wisdom Productions</h3>
   <h4 class="position">iOS Programming Intern</h4>
   <h4 class="time">April 2013 – December 2013</h4>
   <p>Added new features to a prexisting application, <a href="http://pictionapp.com">Piction</a></p>
@@ -62,7 +62,7 @@
 
   <div class="job2">
   <img src="img/anthrotronix.jpg" alt="Anthrotronix">
-  <h3 class="company">Anthrotronix, Inc</h3>
+  <h3 class="subcategory">Anthrotronix, Inc</h3>
   <h4 class="position">Software Engineering Intern</h4>
   <h4 class="time">May 2013 – August 2013</h4>
   <p>Software testing<br>
@@ -133,7 +133,7 @@
   </div>
 
   <div class="subject">
-  <h3 class="subject">Linguistics Courses</h3>
+  <h3>Linguistics Courses</h3>
   <div class="group1">
   <p><span class="courseID">LING 1101</span> - Introduction to Linguistics</p>
   <p><span class="courseID">LING 4485</span> - Topics in Computational Linguistics (Matlab &amp; Python)</p>
