--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,16 @@
 </ul>
 </header>
 <div class="contentArea">
-<p>For my Computer Vision class, some cool projects I've done include Image Scissors to semi-automatically cut out something from an image, a feature detector to compare images, a Panorama maker, and a pedestrian detector using Machine Learning.  Message me if you want to hear more about these or other in-class projects!</p><br>
+<h2 class="category">In-Class Projects</h2>
+<h3 class="subcategory">Computational Linguistics</h3>
+<p>I analyzed phonations for speaker identification.  I looked at the actual waveforms of two speakers to see if it was possible to identify who was speaking using the F0 and spectral tilt values as features in an SVM.</p>
+<br>
+
+<h3 class="subcategory">Computer Vision</h3>
+<p>Some cool projects I've done include Image Scissors to semi-automatically cut out something from an image, a feature detector to compare images, a Panorama maker, and a pedestrian detector using Machine Learning. </p>
+
+<br>
+<p>Message me if you want to hear more about these or other in-class projects!</p><br>
 </div>
 
 <footer class="contact">
