--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
 <div class="contentArea">
 <h2 class="category">In-Class Projects</h2>
 <h3 class="subcategory">Computational Linguistics</h3>
-<p>I analyzed phonations for speaker identification.  I looked at the actual waveforms of two speakers to see if it was possible to identify who was speaking using the F0 and spectral tilt values as features in an SVM.</p>
+<p>I analyzed phonations for speaker identification.  I looked at the actual waveforms of two speakers to see if it was possible to identify who was speaking using the F0 and spectral tilt values as features in an SVM.  I am still working on this project.  But if you want a preview you can see my results from the end of Sophomore year <a href="img/CompLingProject.pdf">here</a>.</p>
 <br>
 
 <h3 class="subcategory">Computer Vision</h3>
