--- a/tv.html
+++ b/tv.html
@@ -20,7 +20,7 @@
 </ul>
 </header>
 <div class="contentArea">
-<h2>Shows I love:</h2>
+<h2 class="category">Shows I love</h2>
 <ul>
   <li>Game of Thrones</li>
   <li>Parks and Recreation</li>
