--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
   <li><h2><a href="./index.html" class="selected">About Me</a></h2></li>
   <li><h2><a href="./experience.html">Experience</a></h2></li>
   <li><h2><a href="./projects.html">Projects</a></h2></li>
-  <li><h2><a href="./tv.html">TV Shows</a></h2></li>
 </ul>
 </header>
 
@@ -25,7 +24,9 @@
   <img src="img/head_shot.jpg" alt="Profile">
   <p>Hi! My name is Akhila and I am a Junior studying <span class="interest">Computer Science</span> and <span class="interest">Mathematics</span> at Cornell University. More specifically, I am interested in <span class="interest">computer vision</span>, <span class="interest">natural language processing</span>, and <span class="interest">artificial intelligence</span>!<br>
   <br>
-  Some of my hobbies include being a sister of Alpha Xi Delta, hanging out with friends, keeping up with a plethora of TV shows, and exercising. Feel free to message me if you want to talk about CV, NLP, AI or even one of the shows I follow!</p>
+  Some of my hobbies include being a sister of Alpha Xi Delta, hanging out with friends, exercising, and keeping up with a plethora of TV shows. Some of the shows I love include Doctor Who, Game of Thrones, Bob's Burgers, and Scrubs.  I have recently decided to start The Blacklist!<br>
+  <br>
+  Feel free to message me if you want to talk about CV, NLP, AI or even one of the shows I follow!</p>
 </div>
 
 <div class="contact">
