--- a/projects.html
+++ b/projects.html
@@ -20,9 +20,18 @@
     </header>
 
     <div class="contentArea">
+      <h2 class="category">Outside Projects</h2>
+      <h3 class="subcategory">Application of Genetic Algorithms for Image Generation</h3>
+      <p>This project was started originally for my Artificial Intelligence Practicum.  Our goal was to compare different forms of local search. Specifically, we looked at hill stepping and genetic algorithms in the setting of procedurally generating images using polygons.  For class, we implemented the project in Python.  To see our paper, please click <a href="img/AIProject.pdf">here</a>. Unfortunately, Python was too slow for our needs.  Thus, after the class was over, we implemented the algorithms in C++.  This is still a work in progress. The repo can be found <a href="https://github.com/akhilaananthram/GeneticAlgorithm">here</a>.</p>
+      <br>
+
       <h2 class="category">In-Class Projects</h2>
+      <h3 class="subcategory">Machine Learning</h3>
+      <p>My team participated in the Kaggle competition, conducting sentiment analysis of movie review.  We compared multiple machine learning techniques.  To see our paper, please click <a href="img/MLProject.pdf">here</a>.</p>
+      <br>
+
       <h3 class="subcategory">Computational Linguistics</h3>
-      <p>I analyzed phonations for speaker identification.  I looked at the actual waveforms of two speakers to see if it was possible to identify who was speaking using the F0 and spectral tilt values as features in an SVM.  I am still working on this project.  But if you want a preview you can see my results from the end of Sophomore year <a href="img/CompLingProject.pdf">here</a>.</p>
+      <p>I analyzed phonations for speaker identification.  I looked at the actual waveforms of two speakers to see if it was possible to identify who was speaking using the F0 and spectral tilt values as features in an SVM.  You can see my results from the end of Sophomore year <a href="img/CompLingProject.pdf">here</a>.</p>
       <br>
 
       <h3 class="subcategory">Computer Vision</h3>
