--- a/experience.html
+++ b/experience.html
@@ -41,16 +41,6 @@
       </div>
 
       <div class="job2">
-        <img src="img/cornell.gif" alt="Cornell">
-        <h3 class="subcategory">Cornell University</h3>
-        <h4 class="position">Calculus Course Assistant</h4>
-        <h4 class="time">August 2013 – December 2013</h4>
-        <p>Graded homework<br>
-        Held study sessions and helped students with their class work</p>
-        <br>
-      </div>
-
-      <div class="job1">
         <img src="img/awp.png" alt="AWP">
         <h3 class="subcategory">Ancient Wisdom Productions</h3>
         <h4 class="position">iOS Programming Intern</h4>
@@ -59,7 +49,7 @@
         <br>
       </div>
 
-      <div class="job2">
+      <div class="job1">
         <img src="img/anthrotronix.jpg" alt="Anthrotronix">
         <h3 class="subcategory">Anthrotronix, Inc</h3>
         <h4 class="position">Software Engineering Intern</h4>
@@ -75,21 +65,50 @@
 
       <hr class="divider">
 
+      <h2 class="category">TA Experience</h2>
+      <div class="job1">
+        <img src="img/cornell.gif" alt="Cornell">
+        <h3 class="subcategory">Computer Vision</h3>
+        <h4 class="position">Professor Kavita Bala</h4>
+        <h4 class="time">January 2015 – May 2015</h4>
+        <p>Hold office hours<br>
+        Grade homework and exam<br>
+        Monitor Piazza and answer questions<br>
+        Assist with project development for a course that uses C++</p>
+        <br>
+      </div>
+
+      <div class="job2">
+        <img src="img/cornell.gif" alt="Cornell">
+        <h3 class="subcategory">Calculus I</h3>
+        <h4 class="position">Professor Daina Taimina</h4>
+        <h4 class="time">August 2013 – December 2013</h4>
+        <p>Graded homework<br>
+        Held study sessions and helped students with their class work</p>
+        <br>
+      </div>
+
+      <hr class="divider">
+
       <h2 class="category">Relevant Coursework</h2>
 
       <div class="subject">
         <h3 >Computer Science Courses</h3>
-        <div class="group3">
+        <div class="group">
           <h4 class="year">Junior Year</h4>
+          <p><span class="courseID">CS 4820</span> - Introduction to Algorithms</p>
+          <p><span class="courseID">CS 4786</span> - Machine Learning for Data Science</p>
+          <p><span class="courseID">CS 4740</span> - Introduction to Natural Language Processing</p>
+          <p><span class="courseID">CS 7790</span> - Seminar in Artificial Intelligence</p>
           <p><span class="courseID">INFO 1300</span> - Introductory Design and Programming for the Web (HTML &amp; CSS)</p>
-          <p><span class="courseID">CS 4300</span> - Information Retrieval</p>
+          <p><span class="courseID">CS 4300</span> - Information Retrieval (Java &amp; Python)</p>
           <p><span class="courseID">CS 4410</span> - Operating Systems (Python)</p>
           <p><span class="courseID">CS 4780</span> - Machine Learning (Python)</p>
           <p><span class="courseID">CS 4701</span> - Practicum in Artificial Intelligence</p>
-          <p><span class="courseID">CS 4700</span> - Foundations of Artificial Intelligence</p>
+          <p><span class="courseID">CS 4700</span> - Foundations of Artificial Intelligence (Python)</p>
         </div>
 
-        <div class="group3">
+        <div class="group">
           <h4 class="year">Sophomore Year</h4>
           <p><span class="courseID">CS 2043</span> - Unix Tools and Scripting (Bash Scripts)</p>
           <p><span class="courseID">CS 3410</span> - Computer System Organization and Programming (C)</p>
@@ -98,7 +117,7 @@
           <p><span class="courseID">CS 4670</span> - Introduction to Computer Vision (C++)</p>
         </div>
 
-        <div class="group3">
+        <div class="group">
           <h4 class="year">Freshman Year and HS</h4>
           <p><span class="courseID">CS 2800</span> - Discrete Structures</p>
           <p><span class="courseID">CS 2048</span> - Introduction to iPhone Application Development (Objective C)</p>
@@ -113,14 +132,19 @@
 
       <div class="subject">
         <h3>Math Courses</h3>
-        <div class="group2">
+        <div class="group">
+          <h4 class="year">Junior Year</h4>
+          <p><span class="courseID">STCSI 2100</span> - Introduction to Statistics</p>
+        </div>
+
+        <div class="group">
           <h4 class="year">Sophomore Year</h4>
           <p><span class="courseID">CS 4850</span> - Mathematical Foundations for the Information Age</p>
           <p><span class="courseID">MATH 3360</span> - Applicable Algebra</p>
           <p><span class="courseID">MATH 4130</span> - Honors Introduction to Analysis I</p>
         </div>
 
-        <div class="group2">
+        <div class="group">
           <h4 class="year">Freshman Year and HS</h4>
           <p><span class="courseID">MATH 4370</span> - Computational Algebra</p>
           <p><span class="courseID">MATH 4550</span> - Applicable Geometry</p>
@@ -133,13 +157,13 @@
 
       <div class="subject">
         <h3>Linguistics Courses</h3>
-        <div class="group1">
+        <div class="group">
           <p><span class="courseID">LING 1101</span> - Introduction to Linguistics</p>
           <p><span class="courseID">LING 4485</span> - Topics in Computational Linguistics (Matlab &amp; Python)</p>
           <br>
         </div>
       </div>
-    </div>
+    </div> 
 
     <footer class="contact">
       <ul>
