--- a/experience.html
+++ b/experience.html
@@ -21,7 +21,7 @@
     </header>
 
     <div class="contentArea">
-      <h2 class="category">Professional Experience</h2>
+      <h2 class="category">Professional</h2>
 
       <div class="job1">
         <img src="img/blackbird.png" alt="Blackbird" style="border: 2px solid">
@@ -65,7 +65,7 @@
 
       <hr class="divider">
 
-      <h2 class="category">TA Experience</h2>
+      <h2 class="category">Teaching</h2>
       <div class="job1">
         <img src="img/cornell.gif" alt="Cornell">
         <h3 class="subcategory">Computer Vision</h3>
