--- a/projects.html
+++ b/projects.html
@@ -20,12 +20,17 @@
     </header>
 
     <div class="contentArea">
-      <h2 class="category">Outside Projects</h2>
+      <h2 class="category">Outside</h2>
       <h3 class="subcategory">Application of Genetic Algorithms for Image Generation</h3>
       <p>This project was started originally for my Artificial Intelligence Practicum.  Our goal was to compare different forms of local search. Specifically, we looked at hill stepping and genetic algorithms in the setting of procedurally generating images using polygons.  For class, we implemented the project in Python.  To see our paper, please click <a href="img/AIProject.pdf">here</a>. Unfortunately, Python was too slow for our needs.  Thus, after the class was over, we implemented the algorithms in C++.  This is still a work in progress. The repo can be found <a href="https://github.com/akhilaananthram/GeneticAlgorithm">here</a>.</p>
       <br>
 
-      <h2 class="category">In-Class Projects</h2>
+      <h3 class="subcategory">EEG Signal Classification</h3>
+      <p>As a member of Cornell Data Science, I worked on the subteam that participated in the Kaggle competition to classify EEG signals for seizure prediction.  The repo can be found <a href="https://github.com/ifilonenko/CDS-EEG">here</a>.</p>
+      
+      <br>
+
+      <h2 class="category">In-Class</h2>
       <h3 class="subcategory">Machine Learning</h3>
       <p>My team participated in the Kaggle competition, conducting sentiment analysis of movie review.  We compared multiple machine learning techniques.  To see our paper, please click <a href="img/MLProject.pdf">here</a>.</p>
       <br>
