--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
     <div class="contentArea">
       <h2 class="category">Outside</h2>
       <h3 class="subcategory">Application of Genetic Algorithms for Image Generation</h3>
-      <p>This project was started originally for my Artificial Intelligence Practicum.  Our goal was to compare different forms of local search. Specifically, we looked at hill stepping and genetic algorithms in the setting of procedurally generating images using polygons.  For class, we implemented the project in Python.  To see our paper, please click <a href="img/AIProject.pdf">here</a>. Unfortunately, Python was too slow for our needs.  Thus, after the class was over, we implemented the algorithms in C++.  This is still a work in progress. The repo can be found <a href="https://github.com/akhilaananthram/GeneticAlgorithm">here</a>.</p>
+      <p>This project was started originally for my Artificial Intelligence Practicum.  My partner, <a href="http://griffinbrodman.com">Griffin</a>, and I wanted to compare different forms of local search. Specifically, we looked at hill stepping and genetic algorithms in the setting of procedurally generating images using polygons.  For class, we implemented the project in Python.  To see our paper, please click <a href="img/AIProject.pdf">here</a>. Unfortunately, Python was too slow for our needs.  Thus, after the class was over, we implemented the algorithms in C++.  This is still a work in progress. The repo can be found <a href="https://github.com/akhilaananthram/GeneticAlgorithm">here</a>.</p>
       <br>
 
       <h3 class="subcategory">EEG Signal Classification</h3>
