--- a/experience.html
+++ b/experience.html
@@ -67,10 +67,22 @@
 
       <h2 class="category">Teaching</h2>
       <div class="job1">
+        <img src="img/cds.jpg" alt="CDS" style="border: 2px solid">
+        <h3 class="subcategory">Cornell Data Science</h3>
+        <h4 class="position">Vice President of Education</h4>
+        <h4 class="time">December 2014 – Present</h4>
+        <p>Organize a 5 hour <a href="https://github.com/akhilaananthram/CDS_CrashCourse">crash course</a> for 60 students on Data Science<br>
+        Hold weekly educational sessions<br>
+        Attend e-board meetings and assist in club development</p>
+        <br>
+      </div>
+
+      <div class="job2">
         <img src="img/cornell.gif" alt="Cornell">
         <h3 class="subcategory">Computer Vision</h3>
-        <h4 class="position">Professor Kavita Bala</h4>
-        <h4 class="time">January 2015 – May 2015</h4>
+        <h4 class="position">Teaching Assistant</h4>
+        <h4 class="time">January 2015 – Present</h4>
+        <h4 class="time">Professor Kavita Bala</h4>
         <p>Hold office hours<br>
         Grade homework and exam<br>
         Monitor Piazza and answer questions<br>
@@ -78,11 +90,12 @@
         <br>
       </div>
 
-      <div class="job2">
+      <div class="job1">
         <img src="img/cornell.gif" alt="Cornell">
         <h3 class="subcategory">Calculus I</h3>
-        <h4 class="position">Professor Daina Taimina</h4>
+        <h4 class="position">Course Assistant</h4>
         <h4 class="time">August 2013 – December 2013</h4>
+        <h4 class="time">Professor Daina Taimina</h4>
         <p>Graded homework<br>
         Held study sessions and helped students with their class work</p>
         <br>
