--- a/experience.html
+++ b/experience.html
@@ -21,159 +21,173 @@
     </header>
 
     <div class="contentArea">
-      <h2 class="category">Professional</h2>
-
-      <div class="job1">
-        <img src="img/blackbird.png" alt="Blackbird" style="border: 2px solid">
-        <h3 class="subcategory">Blackbird Technologies</h3>
-        <h4 class="position">Artificial Intelligence Intern</h4>
-        <h4 class="time">May 2014 – August 2014</h4>
-        <p>Worked on detecting the dominant color in an image, using decision trees and support vector machines<br>
-        Implemented a spatial pyramid to improve image classification<br>
-        Implemented soft k-means to handle ambiguity between the classes<br>
-        Created an autocropper to crop rotated images<br>
-        Incorported PCA in the pipeline to reduce the dimension of the feature vectors<br>
-        Created a parts of speech tagger to identify the title, using NLTK<br>
-        Modified the hashing function to account for the bias caused by hashing collisions<br>
-        Annotated images<br>
-        Tested the classifiers</p>
-        <br>
+      <div id="subNav">
+        <ul>
+          <li><a href="#professional">Professional</a></li>
+          <li><a href="#teaching">Teaching</a></li>
+          <li><a href="#coursework">Coursework</a></li>
+        </ul>
       </div>
+      <hr class="divider">
+      <div id="professional">
+        <h2 class="category">Professional</h2>
 
-      <div class="job2">
-        <img src="img/awp.png" alt="AWP">
-        <h3 class="subcategory">Ancient Wisdom Productions</h3>
-        <h4 class="position">iOS Programming Intern</h4>
-        <h4 class="time">April 2013 – December 2013</h4>
-        <p>Added new features to a prexisting application, <a href="http://pictionapp.com">Piction</a></p>
-        <br>
-      </div>
+        <div class="job1">
+          <img src="img/blackbird.png" alt="Blackbird" style="border: 2px solid">
+          <h3 class="subcategory">Blackbird Technologies</h3>
+          <h4 class="position">Artificial Intelligence Intern</h4>
+          <h4 class="time">May 2014 – August 2014</h4>
+          <p>Worked on detecting the dominant color in an image, using decision trees and support vector machines<br>
+          Implemented a spatial pyramid to improve image classification<br>
+          Implemented soft k-means to handle ambiguity between the classes<br>
+          Created an autocropper to crop rotated images<br>
+          Incorported PCA in the pipeline to reduce the dimension of the feature vectors<br>
+          Created a parts of speech tagger to identify the title, using NLTK<br>
+          Modified the hashing function to account for the bias caused by hashing collisions<br>
+          Annotated images<br>
+          Tested the classifiers</p>
+          <br>
+        </div>
 
-      <div class="job1">
-        <img src="img/anthrotronix.jpg" alt="Anthrotronix">
-        <h3 class="subcategory">Anthrotronix, Inc</h3>
-        <h4 class="position">Software Engineering Intern</h4>
-        <h4 class="time">May 2013 – August 2013</h4>
-        <p>Software testing<br>
-        Researched and did basic Android programming<br>
-        Worked with Matlab for data analysis<br>
-        Used Python and OpenCV for object detection<br>
-        Made a game called Tap Tap Rehabilitation for a Maker's Fair<br>
-        Made a version of Tetris using Processing for the Makey Makey</p>
-        <br>
+        <div class="job2">
+          <img src="img/awp.png" alt="AWP">
+          <h3 class="subcategory">Ancient Wisdom Productions</h3>
+          <h4 class="position">iOS Programming Intern</h4>
+          <h4 class="time">April 2013 – December 2013</h4>
+          <p>Added new features to a prexisting application, <a href="http://pictionapp.com">Piction</a></p>
+          <br>
+        </div>
+
+        <div class="job1">
+          <img src="img/anthrotronix.jpg" alt="Anthrotronix">
+          <h3 class="subcategory">Anthrotronix, Inc</h3>
+          <h4 class="position">Software Engineering Intern</h4>
+          <h4 class="time">May 2013 – August 2013</h4>
+          <p>Software testing<br>
+          Researched and did basic Android programming<br>
+          Worked with Matlab for data analysis<br>
+          Used Python and OpenCV for object detection<br>
+          Made a game called Tap Tap Rehabilitation for a Maker's Fair<br>
+          Made a version of Tetris using Processing for the Makey Makey</p>
+          <br>
+        </div>
       </div>
 
       <hr class="divider">
 
-      <h2 class="category">Teaching</h2>
-      <div class="job1">
-        <img src="img/cds.jpg" alt="CDS" style="border: 2px solid">
-        <h3 class="subcategory">Cornell Data Science</h3>
-        <h4 class="position">Vice President of Education</h4>
-        <h4 class="time">December 2014 – Present</h4>
-        <p>Organize a 5 hour <a href="https://github.com/akhilaananthram/CDS_CrashCourse">crash course</a> for 60 students on Data Science<br>
-        Hold weekly educational sessions<br>
-        Attend e-board meetings and assist in club development</p>
-        <br>
-      </div>
+      <div id="teaching">
+        <h2 class="category">Teaching</h2>
+        <div class="job1">
+          <img src="img/cds.jpg" alt="CDS" style="border: 2px solid">
+          <h3 class="subcategory">Cornell Data Science</h3>
+          <h4 class="position">Vice President of Education</h4>
+          <h4 class="time">December 2014 – Present</h4>
+          <p>Organize a 5 hour <a href="https://github.com/akhilaananthram/CDS_CrashCourse">crash course</a> for 60 students on Data Science<br>
+          Hold weekly educational sessions<br>
+          Attend e-board meetings and assist in club development</p>
+          <br>
+        </div>
 
-      <div class="job2">
-        <img src="img/cornell.gif" alt="Cornell">
-        <h3 class="subcategory">Computer Vision</h3>
-        <h4 class="position">Teaching Assistant</h4>
-        <h4 class="time">January 2015 – Present</h4>
-        <h4 class="time">Professor Kavita Bala</h4>
-        <p>Hold office hours<br>
-        Grade homework and exam<br>
-        Monitor Piazza and answer questions<br>
-        Assist with project development for a course that uses C++</p>
-        <br>
-      </div>
+        <div class="job2">
+          <img src="img/cornell.gif" alt="Cornell">
+          <h3 class="subcategory">Computer Vision</h3>
+          <h4 class="position">Teaching Assistant</h4>
+          <h4 class="time">January 2015 – Present</h4>
+          <h4 class="time">Professor Kavita Bala</h4>
+          <p>Hold office hours<br>
+          Grade homework and exam<br>
+          Monitor Piazza and answer questions<br>
+          Assist with project development for a course that uses C++</p>
+          <br>
+        </div>
 
-      <div class="job1">
-        <img src="img/cornell.gif" alt="Cornell">
-        <h3 class="subcategory">Calculus I</h3>
-        <h4 class="position">Course Assistant</h4>
-        <h4 class="time">August 2013 – December 2013</h4>
-        <h4 class="time">Professor Daina Taimina</h4>
-        <p>Graded homework<br>
-        Held study sessions and helped students with their class work</p>
-        <br>
+        <div class="job1">
+          <img src="img/cornell.gif" alt="Cornell">
+          <h3 class="subcategory">Calculus I</h3>
+          <h4 class="position">Course Assistant</h4>
+          <h4 class="time">August 2013 – December 2013</h4>
+          <h4 class="time">Professor Daina Taimina</h4>
+          <p>Graded homework<br>
+          Held study sessions and helped students with their class work</p>
+          <br>
+        </div>
       </div>
 
       <hr class="divider">
 
-      <h2 class="category">Relevant Coursework</h2>
+      <div id="coursework">
+        <h2 class="category">Relevant Coursework</h2>
 
-      <div class="subject">
-        <h3 >Computer Science Courses</h3>
-        <div class="group">
-          <h4 class="year">Junior Year</h4>
-          <p><span class="courseID">CS 4820</span> - Introduction to Algorithms</p>
-          <p><span class="courseID">CS 4786</span> - Machine Learning for Data Science</p>
-          <p><span class="courseID">CS 4740</span> - Introduction to Natural Language Processing</p>
-          <p><span class="courseID">CS 7790</span> - Seminar in Artificial Intelligence</p>
-          <p><span class="courseID">INFO 1300</span> - Introductory Design and Programming for the Web (HTML &amp; CSS)</p>
-          <p><span class="courseID">CS 4300</span> - Information Retrieval (Java &amp; Python)</p>
-          <p><span class="courseID">CS 4410</span> - Operating Systems (Python)</p>
-          <p><span class="courseID">CS 4780</span> - Machine Learning (Python)</p>
-          <p><span class="courseID">CS 4701</span> - Practicum in Artificial Intelligence</p>
-          <p><span class="courseID">CS 4700</span> - Foundations of Artificial Intelligence (Python)</p>
+        <div class="subject">
+          <h3 >Computer Science Courses</h3>
+          <div class="group">
+            <h4 class="year">Junior Year</h4>
+            <p><span class="courseID">CS 4820</span> - Introduction to Algorithms</p>
+            <p><span class="courseID">CS 4786</span> - Machine Learning for Data Science</p>
+            <p><span class="courseID">CS 4740</span> - Introduction to Natural Language Processing</p>
+            <p><span class="courseID">CS 7790</span> - Seminar in Artificial Intelligence</p>
+            <p><span class="courseID">INFO 1300</span> - Introductory Design and Programming for the Web (HTML &amp; CSS)</p>
+            <p><span class="courseID">CS 4300</span> - Information Retrieval (Java &amp; Python)</p>
+            <p><span class="courseID">CS 4410</span> - Operating Systems (Python)</p>
+            <p><span class="courseID">CS 4780</span> - Machine Learning (Python)</p>
+            <p><span class="courseID">CS 4701</span> - Practicum in Artificial Intelligence</p>
+            <p><span class="courseID">CS 4700</span> - Foundations of Artificial Intelligence (Python)</p>
+          </div>
+
+          <div class="group">
+            <h4 class="year">Sophomore Year</h4>
+            <p><span class="courseID">CS 2043</span> - Unix Tools and Scripting (Bash Scripts)</p>
+            <p><span class="courseID">CS 3410</span> - Computer System Organization and Programming (C)</p>
+            <p><span class="courseID">CS 2024</span> - C++ Programming (C++)</p>
+            <p><span class="courseID">CS 3110</span> - Data Structures and Functional Programming (Ocaml)</p>
+            <p><span class="courseID">CS 4670</span> - Introduction to Computer Vision (C++)</p>
+          </div>
+
+          <div class="group">
+            <h4 class="year">Freshman Year and HS</h4>
+            <p><span class="courseID">CS 2800</span> - Discrete Structures</p>
+            <p><span class="courseID">CS 2048</span> - Introduction to iPhone Application Development (Objective C)</p>
+            <p><span class="courseID">CS 2110</span> - Object Oriented Programming and Data Structures (Java)</p>
+            <p><span class="courseID">CS 1110</span> - Introduction to Computer Programming with Python (Python)</p>
+
+            <br>
+            <p>In high school, I took AP Computer Science (Java)</p>
+            <br>
+          </div>
         </div>
 
-        <div class="group">
-          <h4 class="year">Sophomore Year</h4>
-          <p><span class="courseID">CS 2043</span> - Unix Tools and Scripting (Bash Scripts)</p>
-          <p><span class="courseID">CS 3410</span> - Computer System Organization and Programming (C)</p>
-          <p><span class="courseID">CS 2024</span> - C++ Programming (C++)</p>
-          <p><span class="courseID">CS 3110</span> - Data Structures and Functional Programming (Ocaml)</p>
-          <p><span class="courseID">CS 4670</span> - Introduction to Computer Vision (C++)</p>
+        <div class="subject">
+          <h3>Math Courses</h3>
+          <div class="group">
+            <h4 class="year">Junior Year</h4>
+            <p><span class="courseID">STCSI 2100</span> - Introduction to Statistics</p>
+          </div>
+
+          <div class="group">
+            <h4 class="year">Sophomore Year</h4>
+            <p><span class="courseID">CS 4850</span> - Mathematical Foundations for the Information Age</p>
+            <p><span class="courseID">MATH 3360</span> - Applicable Algebra</p>
+            <p><span class="courseID">MATH 4130</span> - Honors Introduction to Analysis I</p>
+          </div>
+
+          <div class="group">
+            <h4 class="year">Freshman Year and HS</h4>
+            <p><span class="courseID">MATH 4370</span> - Computational Algebra</p>
+            <p><span class="courseID">MATH 4550</span> - Applicable Geometry</p>
+            <p><span class="courseID">MATH 2940</span> - Linear Algebra</p>
+            <br>
+            <p>In high school, I took AP Calculus BC and Multivariable calculus</p>
+            <br>
+          </div>
         </div>
 
-        <div class="group">
-          <h4 class="year">Freshman Year and HS</h4>
-          <p><span class="courseID">CS 2800</span> - Discrete Structures</p>
-          <p><span class="courseID">CS 2048</span> - Introduction to iPhone Application Development (Objective C)</p>
-          <p><span class="courseID">CS 2110</span> - Object Oriented Programming and Data Structures (Java)</p>
-          <p><span class="courseID">CS 1110</span> - Introduction to Computer Programming with Python (Python)</p>
-
-          <br>
-          <p>In high school, I took AP Computer Science (Java)</p>
-          <br>
-        </div>
-      </div>
-
-      <div class="subject">
-        <h3>Math Courses</h3>
-        <div class="group">
-          <h4 class="year">Junior Year</h4>
-          <p><span class="courseID">STCSI 2100</span> - Introduction to Statistics</p>
-        </div>
-
-        <div class="group">
-          <h4 class="year">Sophomore Year</h4>
-          <p><span class="courseID">CS 4850</span> - Mathematical Foundations for the Information Age</p>
-          <p><span class="courseID">MATH 3360</span> - Applicable Algebra</p>
-          <p><span class="courseID">MATH 4130</span> - Honors Introduction to Analysis I</p>
-        </div>
-
-        <div class="group">
-          <h4 class="year">Freshman Year and HS</h4>
-          <p><span class="courseID">MATH 4370</span> - Computational Algebra</p>
-          <p><span class="courseID">MATH 4550</span> - Applicable Geometry</p>
-          <p><span class="courseID">MATH 2940</span> - Linear Algebra</p>
-          <br>
-          <p>In high school, I took AP Calculus BC and Multivariable calculus</p>
-          <br>
-        </div>
-      </div>
-
-      <div class="subject">
-        <h3>Linguistics Courses</h3>
-        <div class="group">
-          <p><span class="courseID">LING 1101</span> - Introduction to Linguistics</p>
-          <p><span class="courseID">LING 4485</span> - Topics in Computational Linguistics (Matlab &amp; Python)</p>
-          <br>
+        <div class="subject">
+          <h3>Linguistics Courses</h3>
+          <div class="group">
+            <p><span class="courseID">LING 1101</span> - Introduction to Linguistics</p>
+            <p><span class="courseID">LING 4485</span> - Topics in Computational Linguistics (Matlab &amp; Python)</p>
+            <br>
+          </div>
         </div>
       </div>
     </div> 
