added educational series

--- a/experience.html
+++ b/experience.html
@@ -82,8 +82,8 @@
           <h3 class="subcategory">Cornell Data Science</h3>
           <h4 class="position">Vice President of Education</h4>
           <h4 class="time">December 2014 – Present</h4>
-          <p>Organize a 5 hour <a href="https://github.com/akhilaananthram/CDS_CrashCourse">crash course</a> for 60 students on Data Science<br>
-          Hold weekly educational sessions<br>
+          <p>Organize a 5 hour <a href="https://github.com/akhilaananthram/data-science-crash-course">crash course</a> for 60 students on Data Science<br>
+          Hold weekly <a href="https://github.com/akhilaananthram/data-science-educational-series">educational sessions</a><br>
           Attend e-board meetings and assist in club development</p>
           <br>
         </div>
