--- a/experience.html
+++ b/experience.html
@@ -95,9 +95,9 @@
           <h4 class="time">January 2015 – Present</h4>
           <h4 class="time">Professor Kavita Bala</h4>
           <p>Hold office hours<br>
-          Grade homework and exam<br>
+          Grade homeworks and exams<br>
           Monitor Piazza and answer questions<br>
-          Assist with project development for a course that uses C++</p>
+          Ported the projects from C++ to Python</p>
           <br>
         </div>
 
@@ -122,21 +122,21 @@
           <h3 >Computer Science Courses</h3>
           <div class="group">
             <h4 class="year">Junior Year</h4>
-            <p><span class="courseID">CS 4820</span> - Introduction to Algorithms</p>
-            <p><span class="courseID">CS 4786</span> - Machine Learning for Data Science</p>
+            <p><span class="courseID">CS 4820</span> - Introduction to Algorithms (LaTeX)</p>
+            <p><span class="courseID">CS 4786</span> - Machine Learning for Data Science (Python, Matlab, &amp; R)</p>
             <p><span class="courseID">CS 7790</span> - Seminar in Artificial Intelligence</p>
-            <p><span class="courseID">INFO 1300</span> - Introductory Design and Programming for the Web (HTML &amp; CSS)</p>
+            <p><span class="courseID">INFO 1300</span> - Introductory Design and Programming for the Web (HTML, CSS, Javascript, &amp; PHP)</p>
             <p><span class="courseID">CS 4300</span> - Information Retrieval (Java &amp; Python)</p>
-            <p><span class="courseID">CS 4410</span> - Operating Systems (Python)</p>
+            <p><span class="courseID">CS 4410</span> - Operating Systems (Python &amp; C)</p>
             <p><span class="courseID">CS 4780</span> - Machine Learning (Python)</p>
-            <p><span class="courseID">CS 4701</span> - Practicum in Artificial Intelligence</p>
-            <p><span class="courseID">CS 4700</span> - Foundations of Artificial Intelligence (Python)</p>
+            <p><span class="courseID">CS 4701</span> - Practicum in Artificial Intelligence (Python)</p>
+            <p><span class="courseID">CS 4700</span> - Foundations of Artificial Intelligence</p>
           </div>
 
           <div class="group">
             <h4 class="year">Sophomore Year</h4>
-            <p><span class="courseID">CS 2043</span> - Unix Tools and Scripting (Bash Scripts)</p>
-            <p><span class="courseID">CS 3410</span> - Computer System Organization and Programming (C)</p>
+            <p><span class="courseID">CS 2043</span> - Unix Tools and Scripting (Bash Scripts &amp; Python)</p>
+            <p><span class="courseID">CS 3410</span> - Computer System Organization and Programming (Logisim &amp; C)</p>
             <p><span class="courseID">CS 2024</span> - C++ Programming (C++)</p>
             <p><span class="courseID">CS 3110</span> - Data Structures and Functional Programming (Ocaml)</p>
             <p><span class="courseID">CS 4670</span> - Introduction to Computer Vision (C++)</p>
