--- a/experience.html
+++ b/experience.html
@@ -42,7 +42,7 @@
           Implemented soft k-means to handle ambiguity between the classes<br>
           Created an autocropper to crop rotated images<br>
           Incorported PCA in the pipeline to reduce the dimension of the feature vectors<br>
-          Created a parts of speech tagger to identify the title, using NLTK<br>
+          Created parts of speech tagger to identify the title, using NLTK<br>
           Modified the hashing function to account for the bias caused by hashing collisions<br>
           Annotated images<br>
           Tested the classifiers</p>
