updated cds position

--- a/experience.html
+++ b/experience.html
@@ -80,7 +80,7 @@
         <div class="job1">
           <img src="img/cds.jpg" alt="CDS" style="border: 2px solid">
           <h3 class="subcategory">Cornell Data Science</h3>
-          <h4 class="position">Vice President of Education</h4>
+          <h4 class="position">Education Lead</h4>
           <h4 class="time">December 2014 – Present</h4>
           <p>Organize a 5 hour <a href="https://github.com/akhilaananthram/data-science-crash-course">crash course</a> for 60 students on Data Science<br>
           Hold weekly <a href="https://github.com/akhilaananthram/data-science-educational-series">educational sessions</a><br>
