--- a/experience.html
+++ b/experience.html
@@ -121,6 +121,11 @@
         <div class="subject">
           <h3 >Computer Science Courses</h3>
           <div class="group">
+            <h4 class="year">Senior Year</h4>
+            <p><span class="courseID">CS 5150</span> - Software Engineering</p>
+          </div>
+          
+          <div class="group">
             <h4 class="year">Junior Year</h4>
             <p><span class="courseID">CS 4820</span> - Introduction to Algorithms (LaTeX)</p>
             <p><span class="courseID">CS 4786</span> - Machine Learning for Data Science (Python, Matlab, &amp; R)</p>
@@ -157,6 +162,13 @@
 
         <div class="subject">
           <h3>Math Courses</h3>
+          <div class="group">
+            <h4 class="year">Senior Year</h4>
+            <p><span class="courseID">MATH 4710</span> - Basic Probability</p>
+            <p><span class="courseID">ORIE 3300</span> - Optimization I</p>
+            <p><span class="courseID">MATH 3230</span> - Introduction to Differential Equations</p>
+          </div>
+          
           <div class="group">
             <h4 class="year">Junior Year</h4>
             <p><span class="courseID">STCSI 2100</span> - Introduction to Statistics</p>
