--- a/projects.html
+++ b/projects.html
@@ -22,12 +22,6 @@
 
     <div class="contentArea">
       <h2 class="category">Outside</h2>
-      <div class="project">
-        <div class="details">
-          <h3 class="subcategory">Keystroke Dynamics on Smartphones</h3>
-          <p>This project was for Cornell Data Science.  I was on a team that wanted to create a smarter login for smartphones that takes into account keystrokes.  We collected data and created a classifier that would authenticate a user. To see the code, please click <a href="https://github.com/usandeep1/CDS_Keystroke_Dynamics">here</a>.</p>
-        </div>
-      </div>
 
       <div class="project">
         <div class="details">
@@ -35,11 +29,11 @@
           <p>This project was for the Data Science Hackathon at Cornell Tech.  My team and I wanted to see what we could learn about the anti-vaccine movement through social media, specifically Twitter.  We collected tweets from the past 10 days related to the movement and created a network graph of the users, hashtags, and linked websites.  Nodes were connected if the users followed each other, a user mentioning a topic, or two topics in the same tweet. As we were trying to identify the two sides of the movement (for and against), we clustered the graph.  To actually learn about the two movements, we created summaries of the tweets, hashtags, and linked websites for both sides.  We were hoping to see if either side had a scientific base. We learned that the two sides are connected, so there was a bit of overlap in the summaries. Overall, this was an interesting study to see the role of social media in present day movements.  This project could be expanded to be a Twitter analytics tool.  To see the code, please click <a href="https://github.com/dhruvsinghal/VaccineStudy">here</a>.</p>
         </div>
       </div>
-
+      
       <div class="project">
         <div class="details">
-          <h3 class="subcategory">Application of Genetic Algorithms for Image Generation</h3>
-          <p>This project was started originally for my Artificial Intelligence Practicum.  My partner, <a href="http://griffinbrodman.com">Griffin</a>, and I wanted to compare different forms of local search. Specifically, we looked at hill stepping and genetic algorithms in the setting of procedurally generating images using polygons.  For class, we implemented the project in Python.  To see our paper, please click <a href="img/AIProject.pdf">here</a>. Unfortunately, Python was too slow for our needs.  Thus, after the class was over, we implemented the algorithms in C++.  This is still a work in progress. The repo can be found <a href="https://github.com/akhilaananthram/GeneticAlgorithm">here</a>.</p>
+          <h3 class="subcategory">Keystroke Dynamics on Smartphones</h3>
+          <p>This project was for Cornell Data Science.  I was on a team that wanted to create a smarter login for smartphones that takes into account keystrokes.  We collected data and created a classifier that would authenticate a user. To see the code, please click <a href="https://github.com/usandeep1/CDS_Keystroke_Dynamics">here</a>.</p>
         </div>
       </div>
 
@@ -51,6 +45,13 @@
       </div>
 
       <h2 class="category">In-Class</h2>
+      <div class="project">
+        <div class="details">
+          <h3 class="subcategory">Artificial Intelligence Practicum</h3>
+          <p>My partner, <a href="http://griffinbrodman.com">Griffin</a>, and I wanted to compare different forms of local search. Specifically, we looked at hill stepping and genetic algorithms in the setting of procedurally generating images using polygons.  For class, we implemented the project in Python.  To see our paper, please click <a href="img/AIProject.pdf">here</a>. Unfortunately, Python was too slow for our needs.  After the class was over, we started to implement the algorithms in C++.  This is still a work in progress. The repo can be found <a href="https://github.com/akhilaananthram/GeneticAlgorithm">here</a>.</p>
+        </div>
+      </div>
+      
       <div class="project">
         <div class="details">
           <h3 class="subcategory">Machine Learning</h3>
